ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'Handy')
ent_conf.set('PACKAGE_BUGREPORT', 'https://source.puri.sm/Librem5/libhandy/issues')
ent_conf.set('PACKAGE_NAME', 'Handy')
ent_conf.set('PACKAGE_STRING', 'libhandy')
ent_conf.set('PACKAGE_TARNAME', 'libhandy-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://source.puri.sm/Librem5/libhandy')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', apiversion)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)

