ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'Adwaita')
ent_conf.set('PACKAGE_BUGREPORT', 'https://gitlab.gnome.org/GNOME/libadwaita/-/issues')
ent_conf.set('PACKAGE_NAME', 'Adwaita')
ent_conf.set('PACKAGE_STRING', 'libadwaita')
ent_conf.set('PACKAGE_TARNAME', 'libadwaita-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://gitlab.gnome.org/GNOME/libadwaita')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', apiversion)
ent_conf.set('PACKAGE_API_NAME', package_api_name)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)

